k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-backend
  template:
    metadata:
      labels:
        app: course-backend
    spec:
      containers:
        - name: backend
          image: chaneee93/course-backend:latest
          ports:
            - containerPort: 8080
