k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-backend
spec:
  selector:
    app: course-backend
  ports:
    - port: 8080
      targetPort: 8080
